2025-08 Feature Update for Version Next (5.0.0)

--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                         <img src="img/releases-ss/nlc-bb.jpg" alt="tdc-v3">
                         <div class="hover-content-blog">
                             <h4>Articulated (Bendy) Buses</h4>
-                            <a class="info" href="../info/bendy-bus.html" class="portfolio-img"><i
+                            <a class="info" href="info/bendy-bus.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                         <img src="img/releases-ss/b5lh-dd.jpg" alt="bus-rep">
                         <div class="hover-content-blog">
                             <h4>Double-Decker Buses</h4>
-                            <a class="info" href="../info/dd-bus.html" class="portfolio-img"><i
+                            <a class="info" href="info/dd-bus.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
