--- a/omsi-2.html
+++ b/omsi-2.html
@@ -129,7 +129,7 @@
 
 
   <section class="about-me-summ clearfix">
-    <div class="pw-portfolio-area clearfix" style="padding-top: 1em; padding-bottom: 2em;">
+    <div class="pw-portfolio-area" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
 
         <div class="alert alert-danger alert-dismissible" role="alert"
