--- a/openbve.html
+++ b/openbve.html
@@ -129,7 +129,7 @@
 
 
   <section class="about-me-summ clearfix">
-    <div class="pw-portfolio-area clearfix" style="padding-top: 1em; padding-bottom: 2em;">
+    <div class="pw-portfolio-area" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
 
         <!-- Accordion -->
@@ -400,7 +400,7 @@
               <img src="img/releases-ss/cgl.png" alt="cgl">
               <div class="hover-content-blog">
                 <h4>Changi Airport Line</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/changi-airport-line.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -412,7 +412,7 @@
               <img src="img/releases-ss/r151.png" alt="r151">
               <div class="hover-content-blog">
                 <h4>Alstom Movia R151</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/r151.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -424,7 +424,7 @@
               <img src="img/releases-ss/c151c.png" alt="c151c">
               <div class="hover-content-blog">
                 <h4>Kawasaki-CRRC Qingdao Sifang C151C</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/c151c.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -436,7 +436,7 @@
               <img src="img/releases-ss/c151b.png" alt="c151b">
               <div class="hover-content-blog">
                 <h4>Kawasaki-CRRC Qingdao Sifang C151B</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/c151b.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
