2025-08 Feature Update for Version Next (5.0.0)

--- a/releases/c151a.html
+++ b/releases/c151a.html
@@ -139,7 +139,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-                                        <p style="text-align: center; padding-bottom: 2em;">The Kawasaki Heavy
+                                        <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Kawasaki Heavy
                                             Industries & CRRC Qingdao Sifang C151A
                                             is the fourth generation electric multiple unit rolling stock in operation
                                             on the existing
