--- a/releases/changi-airport-line.html
+++ b/releases/changi-airport-line.html
@@ -141,7 +141,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Changi Airport Line (Extension) is one of
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Changi Airport Line (Extension) is one of
                       the few
                       train lines in Singapore, an extension of the
                       East-West Line. The route is made by willis_chong. Upgrades are done in-house by SMRTO
