--- a/releases/north-west-line.html
+++ b/releases/north-west-line.html
@@ -141,7 +141,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The North West Line is a fictional line mainly
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The North West Line is a fictional line mainly
                       based on
                       Singapore and New York. The route has been created using Routebuilder, by Nickgoh45. Upgrades are
                       done
