--- a/releases/ryl150.html
+++ b/releases/ryl150.html
@@ -138,7 +138,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Alstom Movia RYL150
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Alstom Movia RYL150
                       is a fictional rolling stock in operation built for the fictional route - the Yishun LRT, which
                       replaces
                       the retiring fleet of YL150/A/B.<br></p>
