--- a/releases/smrt-jw-b9tl.html
+++ b/releases/smrt-jw-b9tl.html
@@ -138,7 +138,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">Advertisement for SMRT's Jurong West Bus Package
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">Advertisement for SMRT's Jurong West Bus Package
                       Promotion for the Wright B9TL bus (GX7767 Studio's Bus only).</p>
                   </div>
                 </div>
