--- a/releases/vdl-clle.html
+++ b/releases/vdl-clle.html
@@ -138,7 +138,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Citea Light Low Entry is an innovative, low
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Citea Light Low Entry is an innovative, low
                       weight concept for a low entry bus especially designed for the demanding conditions of urban and
                       regional transport.</p>
                   </div>
