--- a/releases/yishun-lrt.html
+++ b/releases/yishun-lrt.html
@@ -141,7 +141,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Yishun LRT is a fictional line
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Yishun LRT is a fictional line
                       situated in the real-life town of Yishun, Singapore. The line spreads around the area. Upgrades are
                       done in-house by SMRTO Studios.</p>
                   </div>
