--- a/releases/yl150a-b.html
+++ b/releases/yl150a-b.html
@@ -139,7 +139,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-                                        <p style="text-align: center; padding-bottom: 2em;">The Alstom (Bombardier)
+                                        <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Alstom (Bombardier)
                                             YL150/A/B
                                             is a fictional rolling stock in operation built for the fictional route -
                                             the Yishun LRT<br></p>
