--- a/releases/airport-express-line.html
+++ b/releases/airport-express-line.html
@@ -141,7 +141,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Airport Express Line is a fictional line
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Airport Express Line is a fictional line
                       mainly
                       based on
                       Singapore and New York. The route has been created using Routebuilder, by Nickgoh45. Upgrades are
