--- a/releases/c651s-leg.html
+++ b/releases/c651s-leg.html
@@ -137,7 +137,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The legacy trains in used before Retrofitting
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The legacy trains in used before Retrofitting
                       works.
                       Includes the Refurbished C651, C651A/B/C/D<br></p>
                   </div>
