--- a/releases/dev-files-staris-cddcld-vfd.html
+++ b/releases/dev-files-staris-cddcld-vfd.html
@@ -137,7 +137,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">Want to develop your own STARiS, Car Door
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">Want to develop your own STARiS, Car Door
                       Display,
                       Ceiling-Level Displays and the STARiS VFD? You can try out and download the SVG files and Fonts to
                       get
