--- a/releases/hillgrove-town.html
+++ b/releases/hillgrove-town.html
@@ -140,7 +140,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Hillgrove Town Bus Package is one of seven bus packages under the SMRTO (SMV).</p>
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Hillgrove Town Bus Package is one of seven bus packages under the SMRTO (SMV).</p>
                   </div>
                 </div>
               </div>
