--- a/releases/omsi-developer-files.html
+++ b/releases/omsi-developer-files.html
@@ -137,7 +137,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">Facing issues? You can try and download the
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">Facing issues? You can try and download the
                       Developer's copy of Fonts, Sceneryobjects, Splines folder and the K++ Scripts and then see if the
                       problems are solved.</p>
                   </div>
@@ -192,7 +192,8 @@
               data-bs-parent="#accordMods">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Initial Release
+                  - Initial Release <br>
+
                 </h3><br><br>
 
                 <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Fonts-Humans.7z"
