--- a/releases/r151.html
+++ b/releases/r151.html
@@ -139,7 +139,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-                                        <p style="text-align: center; padding-bottom: 2em;">The Alstom Movia R151
+                                        <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Alstom Movia R151
                                             is the seventh generation electric multiple unit rolling stock in operation
                                             on the existing
                                             North–South
