--- a/releases/solaris-urbino-18.html
+++ b/releases/solaris-urbino-18.html
@@ -138,7 +138,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Solaris Urbino 18 is the standard city bus
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Solaris Urbino 18 is the standard city bus
                       from
                       Solaris Bus & Coach S.A. Poland.</p>
                   </div>
