--- a/releases/woodlands-town.html
+++ b/releases/woodlands-town.html
@@ -140,7 +140,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The Woodlands Town Bus Package is one of seven
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Woodlands Town Bus Package is one of seven
                       bus packages under the SMRTO (SMV).</p>
                   </div>
                 </div>
@@ -151,16 +151,16 @@
 
 
         <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-          <a href="https://i.imgur.com/EhVYunI.jpeg" class="portfolio-img" id="ht43"><img src="https://i.imgur.com/EhVYunI.jpeg"
-              class="img-fluid" id="wto-img" alt="wto-img"></a>
+          <a href="https://i.imgur.com/EhVYunI.jpeg" class="portfolio-img" id="ht43"><img
+              src="https://i.imgur.com/EhVYunI.jpeg" class="img-fluid" id="wto-img" alt="wto-img"></a>
         </div>
 
         <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/wto1.jpg" class="portfolio-img"><img
-                    src="../img/releases-ss/wto1.jpg" class="img-fluid" alt="WT-1"></a>
+                <a href="../img/releases-ss/wto1.jpg" class="portfolio-img"><img src="../img/releases-ss/wto1.jpg"
+                    class="img-fluid" alt="WT-1"></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6">
@@ -172,8 +172,8 @@
 
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/wto2.jpg" class="portfolio-img"><img
-                    src="../img/releases-ss/wto2.jpg" class="img-fluid" alt="WT-2"></a>
+                <a href="../img/releases-ss/wto2.jpg" class="portfolio-img"><img src="../img/releases-ss/wto2.jpg"
+                    class="img-fluid" alt="WT-2"></a>
               </div>
             </div>
 
@@ -338,9 +338,8 @@
     <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
       <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
-        Download the Fonts, Sceneryobjects & Splines <a href="omsi-developer-files.html"><b>here</b></a>
-        before
-        downloading the Map.
+        Download the Fonts <a href="omsi-developer-files.html"><b>here</b></a>
+        before downloading the Map.
       </div>
 
       <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Routes</h3>
@@ -367,6 +366,14 @@
                 <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Map</a>
+
+                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Sceneryobjects</a>
+
+                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Splines</a>
 
                 <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Vehicles.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
