2025-08 Feature Update for Version Next (5.0.0)

--- a/releases/hillgrove-town.html
+++ b/releases/hillgrove-town.html
@@ -352,7 +352,7 @@
     </div>
 
     <!-- Downloads -->
-    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
       <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
         Download the Fonts <a href="omsi-developer-files.html"><b>here</b></a>
@@ -373,38 +373,33 @@
 
         <div class="accordion" id="accordBuses">
           <div class="accordion-item">
-            <h2 class="accordion-header " id="heading3.0-BETA2">
+            <h2 class="accordion-header " id="heading4.0">
               <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse3.0-BETA2" aria-expanded="true" aria-controls="collapse3.0-BETA2">
-                <b>Version 3.0-BETA2 - 25/12/24</b>
+                data-bs-target="#collapse4.0" aria-expanded="true" aria-controls="collapse4.0">
+                <b>Version 4.0 (BETA) - 16/08/25</b>
               </button>
             </h2>
-            <div id="collapse3.0-BETA2" class="accordion-collapse collapse show" aria-labelledby="heading3.0-BETA2"
+            <div id="collapse4.0" class="accordion-collapse collapse show" aria-labelledby="heading4.0"
               data-bs-parent="#accordBuses">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Migration from Stationlinks to Track & Trips Path System <br>
-                  - Major rationalization of Services - Introduction of new services 982, 300, amendments of
-                  most
-                  services. <br>
+                  - Introduction of Hillgrove Region Line BRT <br>
                   - New Adboards by Stellar Ace (selected Bus stops). <br>
-                  - EDS formatting switched to SMRT's Mobitec format. <br>
-                  - Announcement will be progressively updated
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/maps.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Map_HT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Map</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/HT_Sceneryobjects.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Sceneryobjects_HT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Sceneryobjects</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0/HT_Splines.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Splines_HT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Splines</a>
 
-                <a href="https://github.com/smrtosg/Hillgrove-Woodlands-Town/releases/download/v3.0/Vehicles.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Vehicles_HT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Vehicles (For Announcements/EDS)</a>
               </div>
