--- a/releases/omsi-developer-files.html
+++ b/releases/omsi-developer-files.html
@@ -137,7 +137,8 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">Facing issues? You can try and download the
+                    <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">Facing issues? You can try and
+                      download the
                       Developer's copy of Fonts, Sceneryobjects, Splines folder and the K++ Scripts and then see if the
                       problems are solved.</p>
                   </div>
@@ -182,10 +183,10 @@
         <div class="accordion" id="accordMods">
 
           <div class="accordion-item">
-            <h2 class="accordion-header " id="heading1.0">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.0"
-                aria-expanded="true" aria-controls="collapse1.0">
-                <b>Version 1.0 - 25/03/24</b>
+            <h2 class="accordion-header " id="heading1.1">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.1"
+                aria-expanded="true" aria-controls="collapse1.1">
+                <b>Version 1.1 - 25/03/24</b>
               </button>
             </h2>
             <div id="collapse1.0" class="accordion-collapse collapse show" aria-labelledby="heading1.0"
@@ -196,9 +197,13 @@
 
                 </h3><br><br>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Fonts-Humans.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Fonts.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Fonts/Humans Files</a>
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Fonts Files</a>
+
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Humans.7z"
+                  class="btn pw-btn btn-2 mt-15" target="_blank">
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Humans Files</a>
 
                 <a href="https://mega.nz/file/YRUhmRJR#XpKhE1t7hSa16XtK6llX6BmmEhcIPI1haKnSJT1q9b4"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
