--- a/releases/woodlands-town.html
+++ b/releases/woodlands-town.html
@@ -335,7 +335,7 @@
     </div>
 
     <!-- Downloads -->
-    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
       <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
         Download the Fonts <a href="omsi-developer-files.html"><b>here</b></a>
@@ -363,19 +363,19 @@
                   - EDS formatting switched to SMRT's Mobitec format. <br>
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Map_WT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Map</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Sceneryobjects_WT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Sceneryobjects</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v2.0-BETA1/Map.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Splines_WT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Splines</a>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Vehicles.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Vehicles_WT.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Vehicles (For Announcements/EDS)</a>
               </div>
