--- a/omsi-2.html
+++ b/omsi-2.html
@@ -132,6 +132,14 @@
     <div class="pw-portfolio-area" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
 
+        <!-- TEMP -->
+        <div class="alert alert-warning alert-dismissible" role="alert"
+          style="margin-top: 1em; cursor: default; font-size: 14px;">
+          Website Migration is Ongoing. Some links may not work as expected.
+          <button type="button" class="btn-close btn-close-danger" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+
         <div class="alert alert-danger alert-dismissible" role="alert"
           style="margin-top: 1em; cursor: default; font-size: 14px;">
           Only attempt the following if you are familiar with Modifying OMSI contents, and have backed up your
@@ -265,7 +273,7 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-date="2024-12-25">
+            data-date="2025-08-16">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ht.png" alt="ht">
               <div class="hover-content-blog align-items-center">
@@ -341,24 +349,23 @@
 
   </section>
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
-                    </p>
-                </div>
-            </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
         </div>
-    </footer>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
     data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
