--- a/releases/smrt-jw-b9tl.html
+++ b/releases/smrt-jw-b9tl.html
@@ -187,7 +187,7 @@
     </div>
 
     <!-- Downloads -->
-    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
 
       <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
@@ -215,7 +215,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/SMRT.JW_B9TL.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/SMRT.JW.B9TL.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Repaints</a>
               </div>
