--- a/releases/solaris-urbino-18.html
+++ b/releases/solaris-urbino-18.html
@@ -213,7 +213,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/Solaris.BVG.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/Solaris.BVG.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Bus</a>
               </div>
