--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section><!-- End Hero -->
 
 
-    <section class="about-me-area section-padding-80-0 clearfix">
+    <section class="about-me-area section-padding-80-0 clearfix" id="maps-routes">
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
@@ -236,7 +236,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-3"><a href="releases/woodlands-town-line.html">
+                <div class="col-md-6 col-lg-3"><a href="info/woodlands-town-line.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="700ms"
                             style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="ui-icon">
@@ -246,7 +246,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-6 col-lg-3"><a href="releases/circle-line.html">
+                <div class="col-md-6 col-lg-3"><a href="info/circle-line.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="700ms"
                             style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="ui-icon">
