2025-08 Feature Update for Version Next (5.0.0)

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                         <img src="img/releases-ss/df.png" alt="bus-stop-pole">
                         <div class="hover-content-blog">
                             <h4>OMSI 2 Developer Files</h4>
-                            <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                            <a class="info" href="releases/omsi-developer-files.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
