--- a/releases/airport-express-line.html
+++ b/releases/airport-express-line.html
@@ -327,7 +327,7 @@
                   - Updated PMTPG for all stations
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-ael_3.0.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway-AEL_3.0.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
               </div>
@@ -348,7 +348,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway.-.AEL.Legacy.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway.-.AEL.Legacy.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
               </div>
