--- a/releases/c151a.html
+++ b/releases/c151a.html
@@ -195,35 +195,35 @@
                 <button type="button" class="btn-close cls-warning" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
 
-            <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
+            <!-- <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
                 style="margin-top: 0.5em; cursor: default; font-size: 14px;">
                 Download the Base Train from SG5937C <a
                     href="https://drive.google.com/file/d/1UfX8sI7l0MxRwV0Wl5U12wOiDKZCnRhI/view"><b>here</b></a> before
                 downloading the
                 Modifications.
-            </div>
+            </div> -->
 
-            <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Modifications</h3>
+            <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Trains</h3>
             <div class="row justify-content-center">
                 <div class="accordion" id="accordTrains">
 
                     <div class="accordion-item">
                         <h2 class="accordion-header " id="heading2.3">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse2.3" aria-expanded="true" aria-controls="collapse2.3">
-                                <b>Version 2.3 - 28/12/24</b>
+                                data-bs-target="#collapse2.4" aria-expanded="true" aria-controls="collapse2.4">
+                                <b>Version 2.4 - 16/08/25</b>
                             </button>
                         </h2>
-                        <div id="collapse2.3" class="accordion-collapse collapse show" aria-labelledby="heading2.3"
+                        <div id="collapse2.4" class="accordion-collapse collapse show" aria-labelledby="heading2.4"
                             data-bs-parent="#accordTrains">
                             <div class="accordion-body">
                                 <h3 class="changelog">
-                                    - Fixed the missing STARiS texture for AE3 (AEL)
+                                    - Full train file provided
                                 </h3> <br><br>
 
-                                <a href="https://github.com/smrtosg/main/releases/download/v081224/Mods.for.C151A.7z"
+                                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/SMRT.KSF.C151A.569-570.569F.7z"
                                     class="btn pw-btn btn-2 mt-15" target="_blank">
-                                    <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Modifications</a>
+                                    <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Train</a>
                             </div>
                         </div>
                     </div>
