--- a/releases/c651s-leg.html
+++ b/releases/c651s-leg.html
@@ -197,7 +197,7 @@
                   - Compatibility for new Announcement Trigger update
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/Train.-.HLCG.Legacy.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Train.-.HLCG.Legacy.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Trains</a>
               </div>
