--- a/releases/harbourvale-line.html
+++ b/releases/harbourvale-line.html
@@ -467,7 +467,7 @@
                   - Updated PMTPG for all stations
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-HBL.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway-HBL.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
               </div>
@@ -488,7 +488,7 @@
                   - Backported the Announcement Trigger update from Retrofitted Routes
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/Railway.-.HBL.Legacy.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway.-.HBL.Legacy.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
               </div>
