--- a/releases/r151.html
+++ b/releases/r151.html
@@ -139,7 +139,8 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="info justify-content-center">
-                                        <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Alstom Movia R151
+                                        <p style="text-align: center; padding-bottom: 3em; padding-top: 3em;">The Alstom
+                                            Movia R151
                                             is the seventh generation electric multiple unit rolling stock in operation
                                             on the existing
                                             North–South
@@ -194,50 +195,35 @@
                 <button type="button" class="btn-close cls-warning" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
 
-            <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
+            <!-- <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
                 style="margin-top: 0.5em; cursor: default; font-size: 14px;">
                 Download the Base Train from SG5937C <a
                     href="https://drive.google.com/file/d/19sDFWiDKr-981siRYyYDslvJockTsAtt/view"><b>here</b></a> before
                 downloading the
                 Modifications.
-            </div>
+            </div> -->
 
-            <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Modifications</h3>
+            <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Trains</h3>
             <div class="row justify-content-center">
                 <div class="accordion" id="accordTrains">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading2.3">
+                        <h2 class="accordion-header" id="heading1.3">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse2.3" aria-expanded="true" aria-controls="collapse2.3">
-                                <b>Version 1.2 - 21/12/24</b>
+                                data-bs-target="#collapse1.3" aria-expanded="true" aria-controls="collapse1.3">
+                                <b>Version 1.3 - 16/08/25</b>
                             </button>
                         </h2>
-                        <div id="collapse2.3" class="accordion-collapse collapse show" aria-labelledby="heading2.3"
+                        <div id="collapse1.3" class="accordion-collapse collapse show" aria-labelledby="heading1.3"
                             data-bs-parent="#accordTrains">
                             <div class="accordion-body">
                                 <h3 class="changelog">
-                                    - Added Support for Retrofitted NWL route (CDD-CLD)
+                                    - Full train file provided <br>
+                                    - Updated Loop Sound
                                 </h3> <br><br>
 
-                                <a href="https://github.com/smrtosg/main/releases/download/v081224/Mods.for.R151.7z"
+                                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/SMRT.Alstom.MOVIA.R151.825-826.825F.7z"
                                     class="btn pw-btn btn-2 mt-15" target="_blank">
-                                    <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Modifications</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading1.0">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse1.0" aria-expanded="false" aria-controls="collaps1.0">
-                                Version 1.0 - 15/09/24
-                            </button>
-                        </h2>
-                        <div id="collapse1.0" class="accordion-collapse collapse" aria-labelledby="heading1.0"
-                            data-bs-parent="#accordTrains">
-                            <div class="accordion-body">
-                                <h3 class="changelog">
-                                    - Initial Release
+                                    <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Train</a>
                             </div>
                         </div>
                     </div>
