--- a/releases/ryl150.html
+++ b/releases/ryl150.html
@@ -187,17 +187,18 @@
             <h2 class="accordion-header " id="heading1.0">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.0"
                 aria-expanded="true" aria-controls="collapse1.0">
-                <b>Version 1.0 - 06/12/24</b>
+                <b>Version 1.1 - 16/08/25</b>
               </button>
             </h2>
             <div id="collapse1.0" class="accordion-collapse collapse show" aria-labelledby="heading1.0"
               data-bs-parent="#accordTrains">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Initial Release
+                  - Full train file provided <br>
+                  - Updated Loop Sound
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v081224/Alstom.MOVIA.RYL150.3001.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Alstom.MOVIA.RYL150.3001.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;RYL150</a>
               </div>
