--- a/releases/changi-airport-line.html
+++ b/releases/changi-airport-line.html
@@ -300,20 +300,20 @@
 
                 <div class="accordion" id="accordRoutes">
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading2.2">
+                    <h2 class="accordion-header" id="heading2.1">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapse2.2" aria-expanded="true" aria-controls="collapse2.2">
-                        <b>Version 2.0 - 11/09/24</b>
+                        data-bs-target="#collapse2.1" aria-expanded="true" aria-controls="collapse2.1">
+                        <b>Version 2.1 - 16/08/25</b>
                       </button>
                     </h2>
-                    <div id="collapse2.2" class="accordion-collapse collapse show" aria-labelledby="heading2.2"
+                    <div id="collapse2.1" class="accordion-collapse collapse show" aria-labelledby="heading2.1"
                       data-bs-parent="#accordRoutes">
                       <div class="accordion-body">
                         <h3 class="changelog">
-                          - Retrofitted the stations to use the new PSDs to fit the new trains <br>
+                          - New PMTPG announcements
                         </H3> <br><br>
 
-                        <a href="https://github.com/smrtosg/main/releases/download/v110924/Railway.-.CGL_R151.Supported.7z"
+                        <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway-CGL_2.1.7z"
                           class="btn pw-btn btn-2 mt-15">
                           <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
                       </div>
@@ -333,7 +333,7 @@
                           - New Chimes Implemented <br>
                         </H3> <br><br>
 
-                        <a href="https://github.com/smrtosg/main/releases/download/v110924/Railway.-.CGL.Legacy.7z"
+                        <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway.-.CGL.Legacy.7z"
                           class="btn pw-btn btn-2 mt-15">
                           <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
                       </div>
