--- a/releases/dev-files-staris-cddcld-vfd.html
+++ b/releases/dev-files-staris-cddcld-vfd.html
@@ -198,20 +198,20 @@
         <div class="accordion" id="accordMods">
 
           <div class="accordion-item">
-            <h2 class="accordion-header" id="heading1.3">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.3"
-                aria-expanded="true" aria-controls="collapse1.3">
-                <b>Version 1.3 - 24/01/25</b>
+            <h2 class="accordion-header" id="heading1.5">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.5"
+                aria-expanded="true" aria-controls="collapse1.5">
+                <b>Version 1.5 - 16/08/25</b>
               </button>
             </h2>
-            <div id="collapse1.3" class="accordion-collapse collapse show" aria-labelledby="heading1.3"
+            <div id="collapse1.5" class="accordion-collapse collapse show" aria-labelledby="heading1.5"
               data-bs-parent="#accordMods">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Added SVG Files for WTL CDD/CLDs (RW105/RW110A)
+                  - Updated SVG Files for new STARIS 2 design for KSFC
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/STARiS-CDDCLD.Dev.Files.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/STARiS-CDDCLD.Dev.Files.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Dev Files</a>
               </div>
