--- a/releases/north-west-line.html
+++ b/releases/north-west-line.html
@@ -393,7 +393,7 @@
                   - Updated PMTPG for all stations
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-NWL_3.0.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway-NWL_3.0.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
               </div>
@@ -414,7 +414,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/North.West.Line.v0.8.zip"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/North.West.Line.v0.8.zip"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
               </div>
