--- a/releases/omsi-developer-files.html
+++ b/releases/omsi-developer-files.html
@@ -186,14 +186,14 @@
             <h2 class="accordion-header " id="heading1.1">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.1"
                 aria-expanded="true" aria-controls="collapse1.1">
-                <b>Version 1.1 - 25/03/24</b>
+                <b>Version 1.3 - 16/08/25</b>
               </button>
             </h2>
             <div id="collapse1.0" class="accordion-collapse collapse show" aria-labelledby="heading1.0"
               data-bs-parent="#accordMods">
               <div class="accordion-body">
                 <h3 class="changelog">
-                  - Initial Release <br>
+                  - Re-based to 2025 File Versions <br>
 
                 </h3><br><br>
 
@@ -205,13 +205,13 @@
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Humans Files</a>
 
-                <a href="https://mega.nz/file/YRUhmRJR#XpKhE1t7hSa16XtK6llX6BmmEhcIPI1haKnSJT1q9b4"
+                <a href="https://mega.nz/file/90hQiA4T#GwiW9ygKllAUMWLBUAX1239TQ6vy7AoT0Q41hWIXEEU"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Sceneryobjects Files</a>
 
                 <a href="https://mega.nz/file/tJUwQIZR#rkxL9yS9lrrS6dPCD7MsbAg2K9ELWVmxQh_KBELpPm4"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Splines Files</a>
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Splines Files</a>
 
                 <a href="https://mega.nz/file/RIcymA5T#msKbuxNnYe3Si5VNSZuKk1rZibpc9Ju4RrIRIn1k_5I"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
