--- a/releases/vdl-clle.html
+++ b/releases/vdl-clle.html
@@ -207,7 +207,7 @@
                   - Initial Release
                 </h3> <br><br>
 
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/VDL_Citea_LLE_Release_2.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v2508.1001/VDL.Citea.LLE.Release.2.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
                   <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Bus</a>
               </div>
