--- a/releases/yishun-lrt.html
+++ b/releases/yishun-lrt.html
@@ -474,26 +474,18 @@
                   <h2 class="accordion-header" id="heading2.1">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapse2.1" aria-expanded="true" aria-controls="collapse2.1">
-                      <b>Version 2.0a - 09/12/24</b>
+                      <b>Version 2.1 - 16/08/25</b>
                     </button>
                   </h2>
                   <div id="collapse2.1" class="accordion-collapse collapse show" aria-labelledby="heading2.1"
                     data-bs-parent="#accordRoutes">
                     <div class="accordion-body">
                       <h3 class="changelog">
-                        - Renamed Bottle Tree Park to HomeTeamNS (Khatib) <br>
-                        - New Alstom MOVIA RYL150 (based off Bombardier MOVIA C951) <br>
-                        - New FHPSDs to fit the new train <br>
-                        - New Station signs <br>
-                        - New Lift Design <br>
-                        - Announcement now triggers as soon as train departs <br>
-                        - New announcements (2 variants of announcements) <br>
-                        - All stations now have lifts <br>
-                        - Wall signages removed, in lieu of the new signage boards being installed <br>
-                        - Updated PSD map diagrams <br>
+                        - Updated Announcement Trigger <br>
+                        - New PMTPG announcement; reverted to announcements made by CHY
                       </h3> <br><br>
 
-                      <a href="https://github.com/smrtosg/main/releases/download/v081224/Railway.-.YSLRT.v2.0a.7z"
+                      <a href="https://github.com/smrtosg/main/releases/download/v2508.1000/Railway-YSLRT_2.1.7z"
                         class="btn pw-btn btn-2 mt-15" target="_blank">
                         <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
                     </div>
@@ -565,155 +557,6 @@
 
 
           </div>
-
-    <!-- Downloads -->
-    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-      <div class="alert alert-warning alert-dismissible wow fadeInUp" data-wow-delay="900ms" role="alert"
-        style="margin-top: 1em; cursor: default; font-size: 14px;">
-        The support for the legacy C651/A/B/C/D has been deprecated. Download <b>Version 1.0.2</b> to use it for
-        the <b>Legacy Trains</b>.
-        <button type="button" class="btn-close cls-warning" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-
-      <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Routes</h3>
-      <div class="row justify-content-center">
-
-        <div class="accordion" id="accordRoutes">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading3.0">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3.0"
-                aria-expanded="true" aria-controls="collapse3.0">
-                <b>Version 3.0 - 11/08/25</b>
-              </button>
-            </h2>
-            <div id="collapse3.0" class="accordion-collapse collapse show" aria-labelledby="heading3.0"
-              data-bs-parent="#accordRoutes">
-              <div class="accordion-body">
-                <h3 class="changelog">
-                  - Updated RATiS UI <br>
-                  - Updated PMTPG for all stations
-                </h3> <br><br>
-
-                <a href="https://github.com/smrtosg/main/releases/download/v2508/Railway-ys.7z"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading1.0.2">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse1.0.2" aria-expanded="false" aria-controls="collapse1.0.2">
-                <b>Version 1.0.2 - 03/11/24</b>
-              </button>
-            </h2>
-            <div id="collapse1.0.2" class="accordion-collapse collapse" aria-labelledby="heading1.0.2"
-              data-bs-parent="#accordRoutes">
-              <div class="accordion-body">
-                <h3 class="changelog">
-                  - New Chimes Implemented <br>
-                  - Backported the Announcement Trigger update from Retrofitted Routes
-                </h3> <br><br>
-
-                <a href="https://github.com/smrtosg/main/releases/download/v110924/Railway.-.ys.Legacy.7z"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Route (Legacy)</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-
-      <br><br>
-
-      <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Trains</h3>
-      <div class="row justify-content-center">
-        <div class="accordion" id="accordTrains">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading151C">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse151C" aria-expanded="false" aria-controls="collapse151C">
-                Kawasaki-CRRC Qingdao Sifang C151C</strong>
-              </button>
-            </h2>
-            <div id="collapse151C" class="accordion-collapse collapse" aria-labelledby="heading151C"
-              data-bs-parent="#accordTrains">
-              <div class="accordion-body">
-                <a href="../releases/c151c.html" class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;C151C</a>
-              </div>
-
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading151B">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse151B" aria-expanded="false" aria-controls="collapse151B">
-                Kawasaki-CRRC Qingdao Sifang C151B
-              </button>
-            </h2>
-            <div id="collapse151B" class="accordion-collapse collapse" aria-labelledby="heading151B"
-              data-bs-parent="#accordTrains">
-              <div class="accordion-body">
-                <a href="../releases/c151b.html" class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;C151B</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading151A">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse151A" aria-expanded="false" aria-controls="collapse151A">
-                Kawasaki-CRRC Qingdao Sifang C151A
-              </button>
-            </h2>
-            <div id="collapse151A" class="accordion-collapse collapse" aria-labelledby="heading151A"
-              data-bs-parent="#accordTrains">
-              <div class="accordion-body">
-                <a href="../releases/c151a.html" class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;C151A</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading151">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse151" aria-expanded="false" aria-controls="collapse151">
-                Alstom Movia R151
-              </button>
-            </h2>
-            <div id="collapse151" class="accordion-collapse collapse" aria-labelledby="heading151"
-              data-bs-parent="#accordTrains">
-              <div class="accordion-body">
-                <a href="../releases/r151.html" class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;R151</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingLeg">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseLeg" aria-expanded="false" aria-controls="collapseLeg">
-                Legacy Trains - C651/A/B/C/D
-              </button>
-            </h2>
-            <div id="collapseLeg" class="accordion-collapse collapse" aria-labelledby="headingLeg"
-              data-bs-parent="#accordTrains">
-              <div class="accordion-body">
-                <a href="../releases/c651s-leg.html" class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;C651/A/B/C/D</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-
-
-    </div>
 
   </section>
 
